JSAI/error/src/test/resources/scoping/v313.js

var x = foo();
print(x);

function foo() {
	return 12;
}

function foo() {
	return 42;
}

